Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-25261

Qt key mapping is wrong

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.0.1, 6.1.0 Alpha
    • 5.0.0, 6.0.0
    • Core: Plugins
    • None
    • Linux/X11
    • cfd935fe6c26800befc10889afc0aebde311acca (qt/qtbase/dev) 7133780bc626460299ace2c7df99c0c9d67115e6 (qt/qtbase/6.0)

      For Qt4.6 / Qt4.7 I reported a bug that the key mapping of some special keys was wrong. For legacy support reasons this could not be changed, it was only documented.

      With Qt5.0 there is the chance of improving this.

      Please have a look at

      https://bugreports.qt-project.org/browse/QTBUG-7063
      http://qt.gitorious.org/qt/qt/commit/856f76e44a00a710b1c34eddee5a893a3c0ada6a
      http://qt.gitorious.org/qt/qtbase/blobs/master/src/plugins/platforms/xcb/qxcbkeyboard.cpp
      http://qt.gitorious.org/qt/qtbase/blobs/master/src/corelib/global/qnamespace.qdoc
      http://qt.gitorious.org/qt/qtbase/blobs/master/src/corelib/global/qnamespace.h

      And maybe other documents as well.

        For Gerrit Dashboard: QTBUG-25261
        # Subject Branch Project Status CR V

            rodal Samuel Rødal
            wind-rider Hans Bakker
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes