Fix XCB launch key mapping

They have been reported wrong since Qt 4, and not fixed for behavior
compatibility, fixing it for Qt 6.

[ChangeLog][X11] XF86LaunchXX keys have been remapped, so the Qt names
and X11 names match, instead of being 2 off.

Fixes: QTBUG-25261
Change-Id: Ie3a8676439ae3e93a78218c9e7f4443565e84356
Reviewed-by: Gatis Paeglis <gatis.paeglis@qt.io>
(cherry picked from commit cfd935fe6c26800befc10889afc0aebde311acca)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>